# lidar_smoke_filter

./: CMakeLists.txt  README.md  package.xml
cfg/: cpp_config.yaml
include/: datasetProcess.h  topicPrediction.h  trainModel.h  utility.h
model/: new_model.xml
src/c_plus_plus/: datasetProcess.cc  main.cpp  topicPrediction.cc  trainModel.cc
src/python/: config.py  lidar_dataset_process.py  topic_prediction.py  train_model.py
